--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   </head>
   <body>
     
-    <section class="section-container" >
+    <section class="section-container background-section-one" >
      
       <div class="nav" id="content">
             <h1>Sistema de Cadastros</h1>
             <img src="assets/logo.png" alt="logotipo" alt="logo" width="200px" height="auto"  />
         </div>
+        <div class="section-container2">
         <main class="container-botoes">
           <form action="clientes.html" method="get">
               <button class="botao">Clientes</button>
@@ -24,6 +25,11 @@
               <button class="botao">Produtos</button>
           </form>
       </main>
+    </div>
+      </section>
+      <footer>
+        <p>Todos os direitos reservados</p>
+    </footer>
      </body>
   <script src="js/script.js"></script>
 </html>
